--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.4.19",
     "morgan": "^1.9.1",
-    "onem-npm": "file:../onem-npm",
+    "onem-nodejs-api": "file:../onem-nodejs-api",
     "path": "^0.12.7"
   }
 }
