updated for heroku hosting

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.4.19",
     "morgan": "^1.9.1",
-    "onem-nodejs-api": "file:../onem-nodejs-api",
+    "onem-nodejs-api": "^1.0.1",
     "path": "^0.12.7"
   }
 }
