--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.16.4",
     "helmet": "^3.16.0",
     "http": "0.0.0",
+    "jwt-simple": "^0.5.5",
     "method-override": "^3.0.0",
     "mongoose": "^5.4.19",
     "morgan": "^1.9.1",
