--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node": "10.15.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index"
   },
   "repository": {
     "type": "git",
@@ -25,12 +26,10 @@
   "homepage": "https://github.com/mcoin-project/onem-api#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "compression": "^1.7.3",
     "debug": "^4.1.1",
     "dotenv": "^7.0.0",
     "errorhandler": "^1.5.0",
     "express": "^4.16.4",
-    "helmet": "^3.16.0",
     "http": "0.0.0",
     "jwt-simple": "^0.5.5",
     "method-override": "^3.0.0",
