--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index",
-    "start:dev": "nodemon index"
+    "start": "node ./src/index",
+    "start:dev": "nodemon ./src/index",
+    "start:docker": "nodemon ./todos/src/index"
   },
   "repository": {
     "type": "git",
@@ -26,17 +27,19 @@
   },
   "homepage": "https://github.com/mcoin-project/onem-api#readme",
   "dependencies": {
-    "body-parser": "^1.18.3",
+    "body-parser": "^1.19.0",
     "debug": "^4.1.1",
+    "debug-level": "^0.3.0",
     "dotenv": "^7.0.0",
-    "errorhandler": "^1.5.0",
-    "express": "^4.16.4",
+    "errorhandler": "^1.5.1",
+    "express": "^4.17.0",
     "http": "0.0.0",
-    "jwt-simple": "^0.5.5",
+    "jwt-simple": "^0.5.6",
     "method-override": "^3.0.0",
-    "mongoose": "^5.4.19",
+    "mongoose": "^5.5.9",
+    "mongoose-connection-wrapper": "0.0.3",
     "morgan": "^1.9.1",
-    "onem-nodejs-api": "^1.0.6",
+    "onem-nodejs-api": "^1.0.7",
     "path": "^0.12.7",
     "request": "^2.88.0",
     "request-promise": "^4.2.4"
