--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "onem-api",
+  "name": "onem-todos",
   "version": "1.0.0",
   "description": "ONEm Todos",
   "main": "index.js",
   "engines": {
-    "node": "10.15.3"
+    "node": "^8.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -28,7 +28,6 @@
   "homepage": "https://github.com/mcoin-project/onem-api#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "debug": "^4.1.1",
     "debug-level": "^0.3.0",
     "dotenv": "^7.0.0",
     "errorhandler": "^1.5.1",
@@ -37,11 +36,8 @@
     "jwt-simple": "^0.5.6",
     "method-override": "^3.0.0",
     "mongoose": "^5.5.9",
-    "mongoose-connection-wrapper": "0.0.3",
     "morgan": "^1.9.1",
-    "onem-nodejs-api": "^1.0.7",
-    "path": "^0.12.7",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.4"
+    "onem-nodejs-api": "^1.1.0",
+    "path": "^0.12.7"
   }
 }
