--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "morgan": "^1.9.1",
     "onem-nodejs-api": "^1.1.0",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.1"
   }
 }
