--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./src/index",
     "start:dev": "nodemon ./src/index",
-    "start:docker": "nodemon ./todos/src/index"
+    "start:docker": "nodemon ./src/index"
   },
   "repository": {
     "type": "git",
@@ -38,6 +38,7 @@
     "mongoose": "^5.5.9",
     "morgan": "^1.9.1",
     "onem-nodejs-api": "^1.2.0",
+    "onemsdk": "^0.10.0",
     "path": "^0.12.7"
   },
   "devDependencies": {
