--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "ONEm Todos",
   "main": "index.js",
   "engines": {
-    "node": "^8.0.0"
+    "node": ">=10.15.3",
+    "npm": "6.9.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
