--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.7.7",
     "morgan": "^1.9.1",
-    "onemsdk": "^0.13.0",
+    "node-html-parser": "1.1.12",
+    "onemsdk": "^0.14.2",
     "path": "^0.12.7"
   },
   "devDependencies": {
