--- a/package.json
+++ b/package.json
@@ -4,29 +4,27 @@
   "description": "ONEm Todos",
   "main": "index.js",
   "engines": {
-    "node": ">=10.15.3",
-    "npm": "6.9.0"
+    "node": ">=9.0.0",
+    "npm": ">=6.4.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./src/index",
     "start:dev": "nodemon ./src/index",
-    "start:docker": "nodemon ./src/index"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mcoin-project/onem-api.git"
+    "url": "git+https://github.com/onem-developer/todos-nodejs.git"
   },
   "keywords": [
     "onem",
     "api"
   ],
   "author": "chris horn",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mcoin-project/onem-api/issues"
+    "url": "https://github.com/onem-developer/todos-nodejs/issues"
   },
-  "homepage": "https://github.com/mcoin-project/onem-api#readme",
+  "homepage": "https://github.com/onem-developer/todos-nodejs#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
     "debug-level": "^0.3.0",
@@ -38,7 +36,6 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.7.7",
     "morgan": "^1.9.1",
-    "node-html-parser": "1.1.12",
     "onemsdk": "^0.14.2",
     "path": "^0.12.7"
   },
